--- a/Unity-Tetris.csproj
+++ b/Unity-Tetris.csproj
@@ -236,6 +236,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\NewBehaviourScript.cs" />
+    <Compile Include="Assets\Random.cs" />
+    <Compile Include="Assets\Tiles.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
