--- a/Unity-Tetris.csproj
+++ b/Unity-Tetris.csproj
@@ -235,7 +235,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Select.cs" />
     <Compile Include="Assets\Tetris.cs" />
+    <Compile Include="Assets\UserInput.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
