--- a/Unity-Tetris.csproj
+++ b/Unity-Tetris.csproj
@@ -236,6 +236,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Game.cs" />
+    <Compile Include="Assets\Glass.cs" />
     <Compile Include="Assets\MainMenu.cs" />
     <Compile Include="Assets\Random.cs" />
     <Compile Include="Assets\Tetramino.cs" />
