--- a/Unity-Tetris.csproj
+++ b/Unity-Tetris.csproj
@@ -235,6 +235,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Checker.cs" />
     <Compile Include="Assets\Figures.cs" />
     <Compile Include="Assets\Game.cs" />
     <Compile Include="Assets\Glass.cs" />
